[workspace]
members = ["macros", "tests"] 
package.version = "0.5.1"

[workspace.dependencies]
thiserror = {version = "1.0.58"}
macros = { package = "untwine_macros", path = "macros" }

[package]
name = "untwine"
version.workspace = true
edition = "2021"
description = "Declarative parsing with a BNF-like syntax"
repository = "https://github.com/boxbeam/untwine"
authors = ["boxbeam"]
keywords = ["parsing", "parser", "framework"]
license = "MIT"

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "parsing", "extra-traits", "visit"] }
macros = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
