[workspace]
members = ["macros", "tests"] 
package.version = "0.9.4"

[workspace.dependencies]
thiserror = {version = "1.0.58"}
macros = { package = "untwine_macros", path = "macros", version = "0.9.3" }

[package]
name = "untwine"
version.workspace = true
edition = "2021"
description = "Declarative parsing with a BNF-like syntax"
repository = "https://github.com/boxbeam/untwine"
authors = ["boxbeam"]
keywords = ["parsing", "parser", "framework"]
license = "MIT"

[dependencies]
macros = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
