[package]
name = "untwine_macros"
version = "0.4.1"
edition = "2021"
description = "Declarative parsing with a BNF-like syntax - proc macro"
authors = ["boxbeam"]
keywords = ["parsing", "parser", "framework"]
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["visit", "full", "extra-traits"] }
