[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = "1.38.0"
json5_nodes = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror.workspace = true
untwine = { path = ".." }
